fix text, add vars

--- a/src/style/config.style.css
+++ b/src/style/config.style.css
@@ -1,4 +1,4 @@
-.root {
+:root {
 /* colors */
 --orange: rgb(255, 158, 11);
 
@@ -31,21 +31,21 @@
 --fw-unset: unset;
 
 /* font-size  */
---h1: 32px;
---h2: 24px;
---h3: 18px;
---h4: 14px;
---p: 12px;
+--h1: 28px;
+--h2: 18px;
+--h3: 12px;
+--h4: 8px;
+--p: 6px;
 /* 16 - 24, 20 - 30, 10 - 15*/
 
 /* line-height */
 --lh: 100%;
 
---h1: 48px; /* 32 */
---h2: 36px; /* 24 */
---h3: 27px; /* 18 */
---h4: 21px; /* 14 */
---p: 18px; /* 12 */
+--h1: 42px; /* 32 */
+--h2: 27px; /* 24 */
+--h3: 18px; /* 18 */
+--h4: 12px; /* 14 */
+--p: 12px; /* 12 */
 /* 16 - 24, 20 - 30, 10 - 15*/
 
 
