--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,23 @@
-.App {
-	min-height: 100vh;
+html {
+	height: 100%;
 }
 
 body {
 	background-color: rgb(43, 43, 43);
  	font-family: -apple-system, BlinkMacSystemFont;
 	margin: 0;
+	height: inherit;
+}
+
+#root {
+	height: inherit;
+}
+
+.App {
+  height: inherit;
+}
+
+.AppLayout {
+height: inherit;
+
 }
