--- a/src/style/config.style.css
+++ b/src/style/config.style.css
@@ -34,6 +34,7 @@
 --border-radius-sm: 4px;
 --border-radius-md: 5px;
 --border-radius-lg: 6px;
+--border-radius-xl: 10px;
 --border-radius-circle: 50%;
 
 /* font-weight */
