finish class helpers

--- a/src/style/config.style.css
+++ b/src/style/config.style.css
@@ -26,6 +26,8 @@
 --gray-darken3: rgb(54, 54, 54);
 --gray-darken4: rgb(15, 15, 15);
 
+--black: rgb(0, 0, 0);
+
 /* background  */
 --background-transparent: transparent;
 
